--- a/txlcn-demo-spring-service-b/pom.xml
+++ b/txlcn-demo-spring-service-b/pom.xml
@@ -28,10 +28,10 @@
             <version>1.1.12</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-consul-discovery</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
